force-app/main/default/objects/leaseworks__PBH_Rent_Per_Assembly__c/leaseworks__PBH_Rent_Per_Assembly__c.object-meta.xml
<CustomObject>
    <label>PBH Rent Assembly</label>
    <nameField>
        <label>PBH Rent Per Assembly Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>PBH Rent Assemblies</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>