force-app/main/default/objects/leaseworks__PBH_Rent_Per_Assembly__c/fields/leaseworks__Billing_Currency__c.field-meta.xml
<CustomField>
    <fullName>leaseworks__Billing_Currency__c</fullName>
    <description>Indicates the billing currency, which is set according to the billing currency specified on the related schedule.</description>
    <formula>leaseworks__Rent_Schedule__r.leaseworks__Billing_Currency__c</formula>
    <inlineHelpText>Indicates the billing currency, which is set according to the billing currency specified on the related schedule.</inlineHelpText>
    <label>Billing Currency</label>
    <type>Text</type>
</CustomField>