force-app/main/default/objects/leaseworks__PBH_Rent_Per_Assembly__c/fields/leaseworks__Multicurrency_Enabled__c.field-meta.xml
<CustomField>
    <fullName>leaseworks__Multicurrency_Enabled__c</fullName>
    <description>This hidden checkbox controls the conditional display of fields on the layout when multicurrency is enabled.</description>
    <formula>IF(
  NOT(ISBLANK(leaseworks__Billing_Currency__c)),
  IF(leaseworks__Billing_Currency__c = &quot;USD&quot;, false, true),
  false
)</formula>
    <inlineHelpText>This hidden checkbox controls the conditional display of fields on the layout when multicurrency is enabled.</inlineHelpText>
    <label>_Multicurrency Enabled</label>
    <type>Checkbox</type>
</CustomField>