force-app/main/default/objects/leaseworks__PBH_Rent_Per_Assembly__c/fields/leaseworks__PBH_Amount_New__c.field-meta.xml
<CustomField>
    <fullName>leaseworks__PBH_Amount_New__c</fullName>
    <description>The calculated PBH charge for the assembly, in the selected billing currency.</description>
    <formula>leaseworks__PBH_Amount__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>The calculated PBH charge for the assembly, in the selected billing currency.</inlineHelpText>
    <label>PBH Amount</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>