force-app/main/default/objects/leaseworks__PBH_Rent_Per_Assembly__c/fields/leaseworks__PBH_Rate_F__c.field-meta.xml
<CustomField>
    <fullName>leaseworks__PBH_Rate_F__c</fullName>
    <formula>CASE(
     TEXT(leaseworks__PBH_Rent_Rate__r.leaseworks__Rate_Basis__c),
     &#39;Hourly&#39;, leaseworks__PBH_Rent_Rate__r.leaseworks__PBH_Rate__c, 
     &#39;FH Matrix&#39;, leaseworks__PBH_Rent_Rate__r.leaseworks__PBH_Rate__c, 
     &#39;Cycle&#39;, leaseworks__PBH_Rent_Rate__r.leaseworks__PBH_Rate_FC__c,
     &#39;FC Matrix&#39;, leaseworks__PBH_Rent_Rate__r.leaseworks__PBH_Rate_FC__c, 
     &#39;Both(FH+FC)&#39;, IF( leaseworks__Unit_Type__c == &#39;FH&#39;, leaseworks__PBH_Rent_Rate__r.leaseworks__PBH_Rate__c,  leaseworks__PBH_Rent_Rate__r.leaseworks__PBH_Rate_FC__c ),
     &#39;Greater(FH/FC)&#39;, IF( leaseworks__Unit_Type__c == &#39;FH&#39;, leaseworks__PBH_Rent_Rate__r.leaseworks__PBH_Rate__c,  leaseworks__PBH_Rent_Rate__r.leaseworks__PBH_Rate_FC__c ),
     0
		)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>PBH Rate($)</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>