force-app/main/default/objects/leaseworks__PBH_Rent_Per_Assembly__c/fields/leaseworks__PBH_Rent_Rate__c.field-meta.xml
<CustomField>
    <fullName>leaseworks__PBH_Rent_Rate__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>PBH Rent Rate</label>
    <referenceTo>leaseworks__PBH_Rent_Rate__c</referenceTo>
    <relationshipName>PBH_Amount_Per_Assemblies</relationshipName>
    <type>Lookup</type>
</CustomField>