force-app/main/default/objects/leaseworks__PBH_Rent_Per_Assembly__c/fields/leaseworks__Rate_Basis_F__c.field-meta.xml
<CustomField>
    <fullName>leaseworks__Rate_Basis_F__c</fullName>
    <formula>Text(leaseworks__PBH_Rent_Rate__r.leaseworks__Rate_Basis__c)</formula>
    <label>Rate Basis</label>
    <type>Text</type>
</CustomField>