force-app/main/default/objects/leaseworks__PBH_Rent_Per_Assembly__c/fields/leaseworks__Rent_Schedule__c.field-meta.xml
<CustomField>
    <fullName>leaseworks__Rent_Schedule__c</fullName>
    <label>Rent Schedule</label>
    <referenceTo>leaseworks__Rent__c</referenceTo>
    <relationshipName>PBH_Amount_Per_Assemblies</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>